# RM-homework1

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: camera_params.yaml
coordinate_transform/: a.out  coordinate_transform.cpp
kalman/results/: fitting_equations.txt  homework_data_1_result.csv  homework_data_2_result.csv  homework_data_3_result.csv  homework_data_4_result.csv  stock_filter_result.csv  stock_predict_result.csv
kalman/src/: kalman_homework.cpp  kalman_homework.py  stock_predict.cpp  stock_predict.py
src/calibration/: calibrate.cpp
src/detection/: armor_detect.cpp  armor_video.cpp
src/pnp/: pose_estimation.cpp
